objects/Collections_Auctions__c.object
<CustomObject>
    <description>This is a junction object to create a relationship to a collections case.</description>
    <fields>
        <fullName>Additional_Details__c</fullName>
        <description>created for use as a merge field in email templates</description>
        <formula>Collections_Case_Reord__r.Additional_Detils__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Additional Details</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Auction_To_Collections__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Auction To Collections</label>
        <referenceTo>Auction__c</referenceTo>
        <relationshipName>Collections_Auctions</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Buyer_Account__c</fullName>
        <description>Buyer Dealership of Auction, created for use as a merge field in email templates</description>
        <formula>Auction_To_Collections__r.buyer_dealership__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Buyer Account</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Buyer_IST_Email__c</fullName>
        <description>populated with Workflow Rule to end Failed payment email notifications</description>
        <label>Buyer IST Email</label>
        <type>Email</type>
    </fields>
    <fields>
        <fullName>Buyer_TM_Email__c</fullName>
        <description>This is the Buying Dealerships Territory manager - populated by a workflow rule with a field update.</description>
        <inlineHelpText>This is the Email of the Auctions Buying Dealership Territory Manager</inlineHelpText>
        <label>Buyer TM Email</label>
        <type>Email</type>
    </fields>
    <fields>
        <fullName>Case_Reason__c</fullName>
        <description>Case Reason for case of related Auction, created for use as a merge field in email templates</description>
        <formula>text (Collections_Case_Reord__r.Reason)</formula>
        <label>Case Reason</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Collections_Case_Reord__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>The collections case associated with the object.</description>
        <label>Collections Case Record</label>
        <referenceTo>Case</referenceTo>
        <relationshipName>Collections_Auctions</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Seller_Account__c</fullName>
        <description>Seller Dealership of Auction, created for use as a merge field in email templates</description>
        <formula>Auction_To_Collections__r.Seller_Dealership__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Seller Account</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Seller_IST_Email__c</fullName>
        <description>Seller IST Email stamped by Workflow rule with field update</description>
        <label>Seller IST Email</label>
        <type>Email</type>
    </fields>
    <fields>
        <fullName>Seller_TM_Email__c</fullName>
        <description>Seller Tm Email stamped by Workflow rule with field update</description>
        <label>Seller TM Email</label>
        <type>Email</type>
    </fields>
    <label>Auction with Collection</label>
    <nameField>
        <displayFormat>C-{0}</displayFormat>
        <label>Collections Auctions Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Auctions with Collections</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>